# pi-dash

./: .gitignore  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker.yml
backend/: Cargo.toml
backend/src/: auth.rs  collector.rs  history.rs  main.rs  models.rs  ws.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: HistoryChart.tsx  HistoryCharts.tsx  MetricChart.tsx  StatCard.tsx  TempCard.tsx
frontend/src/hooks/: useHistory.ts  useWebSocket.ts
frontend/src/lib/: echarts.ts
frontend/src/pages/: Dashboard.tsx  Login.tsx
