[package]
name = "pi-dash"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-ws = "0.3"
actix-files = "0.6"
actix-rt = "2"
sysinfo = "0.33"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
env_logger = "0.11"
log = "0.4"
rand = "0.8"
futures-util = "0.3"
zstd = "0.13.3"

[profile.release]
opt-level = "z"
lto = true
strip = true
